# CudaJPGDecoder

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md
src/: main.cpp
src/cuda/: GPUDecoder.cu
src/cuda/include/: GPUDecoder.hpp
src/decoder/: Decoder.cpp  DecoderHuffmanTree.cpp
src/decoder/include/: Decoder.hpp  DecoderHuffmanTree.hpp
src/encoder/: Encoder.cpp  EncoderHuffmanTree.cpp
src/encoder/include/: Encoder.hpp  EncoderHuffmanTree.hpp
src/structs/: DecoderStructs.hpp  HuffNode.hpp  Node.hpp
src/utils/: BitStream.cpp
src/utils/include/: BitStream.hpp  PriorityQueue.hpp  threadPools.hpp  treehelper.hpp
test/: CMakeLists.txt  test.cpp
